Codecademy generated from the project submission page.

--- a/Dasmoto/resource/css/style.css
+++ b/Dasmoto/resource/css/style.css
@@ -31,7 +31,7 @@ span {
   background-color: skyblue;
 }
 
-#brushes h2, #frames h2, #paint h2{
+h2 {
   font-size: 32px;
   font-weight: bold;
   color: white;
